# prust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
schema/: prust.sql
src/: main.rs
static/: index.html
templates/: index.html  paste.html
