[package]
name = "prust"
version = "0.1.0"
authors = ["Chris Glass <christopher.glass@vshn.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-rustls", "tls", "uuid", "macros"] }